# python-monorepo-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test_all_services_and_packages.yaml  test_service_or_package.yaml
scripts/: new-package.sh  new-service.sh
services/api_service/: Dockerfile  Makefile  pyproject.toml
services/api_service/scripts/: docker-build.sh  docker-run.sh  format.sh  lint.sh
services/api_service/src/: run.py
templates/package/: Makefile  pyproject.toml
templates/package/scripts/: format.sh  install.sh  lint.sh  test.sh
templates/service/: Dockerfile  Makefile  pyproject.toml
templates/service/scripts/: docker-build.sh  docker-run.sh  format.sh  install.sh  lint.sh  run.sh  test.sh
templates/service/src/: run.py
